tests/error/linear_errors/field_copy_nested2.err
Error: Copy violation (at $FILE:20:21)
   | 
18 | def foo(s: MyStruct1 @owned) -> MyStruct1:
19 |     measure(s.x.q1)
20 |     return MyStruct1(s.x)
   |                      ^^^ Field `s.x` with non-copyable type `MyStruct2` cannot be
   |                          consumed ...

Note:
   | 
18 | def foo(s: MyStruct1 @owned) -> MyStruct1:
19 |     measure(s.x.q1)
   |             ------ ... since the member `s.x.q1` with non-copyable type `qubit`
   |                    was already consumed here

Guppy compilation failed due to 1 previous error
